# rust-pokemon-id-lottery

./: .gitignore  Cargo.toml  LICENSE  README.md  result_example.csv
src/: award.rs  main.rs  output.rs  result.rs  rng.rs  shuffle.rs  simulate.rs
