[package]
name = "rust-pokemon-id-lottery"
version = "0.1.0"
authors = ["Yusuke Tanaka <wing0920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rand_xorshift = "0.2.0"
indicatif = "0.13.0"
clap = { git = "https://github.com/clap-rs/clap" }
